--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,6 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "android-common"
-include ':library'
+include ':core'
+include ':ui'
+include ':material-color-utilities'
