--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 plugins {
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id "org.jetbrains.kotlin.kapt" version "1.7.10" apply false
 }
 
 task clean(type: Delete) {
@@ -10,4 +11,8 @@ task clean(type: Delete) {
 
 allprojects {
     group = 'com.nextcloud.android-common'
+}
+
+ext {
+    daggerVersion = "2.43.2"
 }
