Import split theming utilities from Talk
Signed-off-by: Álvaro Brey <alvaro.brey@nextcloud.com>

--- a/material-color-utilities/build.gradle
+++ b/material-color-utilities/build.gradle
@@ -1,8 +1,6 @@
 /*
- * Nextcloud Talk application
+ * Nextcloud Android Common Library
  *
- * @author Álvaro Brey
- * Copyright (C) 2022 Álvaro Brey
  * Copyright (C) 2022 Nextcloud GmbH
  *
  * This program is free software: you can redistribute it and/or modify
