--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -28,4 +28,6 @@ jobs:
                 if: ${{ always() }}
                 with:
                     name: ${{ matrix.task }}-report
-                    path: library/build/reports
+                    path: |
+                        **/build/reports
+                        **/build/spotless
